--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2024"
 [dependencies]
 ndarray = "0.16.1"
 half = "2.4"
-digit-layout = "0.2.0"
+digit-layout = "0.3.1"
 ndarray-layout = "0.2.1"
+tensor = { git = "https://github.com/YdrMaster/tensor.git" }
